<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Chinpun</string>
    <string-array name="menu_items_array">
        <item>Sesión actual</item>
        <item>Configuración</item>
    </string-array>
    <string name="drawer_open">Abrir navegación lateral</string>
    <string name="drawer_close">Cerrar navegación lateral</string>
    <string name="action_update">Actualizar info de sesión</string>

    <string name="preferences">Configuración</string>
    <string name="pref_username">Usuario</string>
    <string name="pref_username_summ">Nombre de usuario del LDAP en CRCIT</string>
    <string name="pref_password">Contraseña</string>
    <string name="pref_password_summ">Contraseña del LDAP de CRCIT</string>
    <string name="pref_account_cat">Cuenta</string>

    <string name="session_manager_title">Sesión actual</string>
    <string name="session_time_default">Sin sesión iniciada</string>
    <string name="session_manager_hours_week_label">Información semanal</string>
    <string name="session_manager_hours_month_label">Información mensual</string>
    <string name="session_manager_default_hours">0 h</string>
    <string name="hours_short">h</string>
    <string name="start_session">Iniciar sesión</string>
    <string name="starting_session">Iniciando&#8230;</string>
    <string name="end_session">Cerrar sesión</string>
    <string name="ending_session">Cerrando&#8230;</string>
    <string name="connection_error_500_internal">error interno del servidor</string>
    <string name="connection_error_401_unauthorized">clave o usurio incorrectos</string>
    <string name="connection_error_403_forbidden">acceso prohibido</string>
    <string name="connection_error_unhandled">respuesta sin controlar</string>
    <string name="connection_error_with_code">Error al conectar con chinpun: </string>

    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
</resources>
